@@ -29,11 +29,11 @@
 #import "PDFPluginTextAnnotation.h"
 
 #import "PDFKitImports.h"
-#import <PDFKit/PDFKit.h>
 #import "PDFLayerControllerDetails.h"
-#import <WebCore/ColorMac.h>
+#import <PDFKit/PDFKit.h>
 #import <WebCore/CSSPrimitiveValue.h>
 #import <WebCore/CSSPropertyNames.h>
+#import <WebCore/ColorMac.h>
 #import <WebCore/HTMLElement.h>
 #import <WebCore/HTMLInputElement.h>
 #import <WebCore/HTMLNames.h>
